[gd_scene load_steps=2 format=3 uid="uid://4cx0k3d23pxl"]

[ext_resource type="Script" uid="uid://ydlbl2yqkx0w" path="res://opciones.gd" id="1_bnv6w"]

[node name="Opciones" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnv6w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.310617, 0.310617, 0.310617, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -46.0
offset_right = 155.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="Continuar" type="Button" parent="CanvasLayer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Continuar
"

[node name="Reiniciar" type="Button" parent="CanvasLayer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Reiniciar
"

[node name="Salir" type="Button" parent="CanvasLayer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Salir"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.242
anchor_right = 0.502
anchor_bottom = 0.242
offset_left = -245.0
offset_top = -75.816
offset_right = 246.696
offset_bottom = 75.184
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 110
text = "Opciones"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Continuar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Reiniciar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
